(library
 (name address)
 (modules address)      
)

(library
 (name token)
 (modules token)
)

(library
 (name wallet)
 (modules wallet)
 (libraries token address)
)

(library
 (name lp)
 (modules lp)
 (libraries address token)
)

(library
 (name state)
 (modules state)
 (libraries wallet token address lp)
)
