(test
  (name test)
  (modules test)
  (libraries address token wallet lp state)
)

(test
  (name test1)
  (modules test1)
  (libraries address token wallet lp state)
)

(test
  (name test2)
  (modules test2)
  (libraries address token wallet lp state)
)

(test
  (name test_token)
  (modules test_token)
  (libraries token)
)

(test
  (name test_wallet)
  (modules test_wallet)
  (libraries token address wallet)
)

(test
  (name test_lp)
  (modules test_lp)
  (libraries address token lp)
)

(test
  (name test_structure)
  (modules test_structure)
)
